syntax = "proto3";

package user;

option go_package = "./user";

// 定义用户服务
 service UserService {
  // 创建用户
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  // 获取用户
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  // 删除用户
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
 }

// 创建用户请求
 message CreateUserRequest {
  string name = 1;
  string email = 2;
 }

// 创建用户响应
 message CreateUserResponse {
  string user_id = 1;
 }

// 获取用户请求
 message GetUserRequest {
  string user_id = 1;
 }

// 获取用户响应
 message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
 }

// 删除用户请求
 message DeleteUserRequest {
  string user_id = 1;
 }

// 删除用户响应
 message DeleteUserResponse {
  bool success = 1;
 }